force-app/main/default/objects/Quote_Line_Item__c/fields/Standard_Pack_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Standard_Pack_Quantity__c</fullName>
    <label>Standard Pack Quantity</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>