force-app/main/default/objects/Quote_Line_Item__c/fields/Supplier_Drawing__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Drawing__c</fullName>
    <label>Supplier Drawing</label>
    <length>100</length>
    <type>Text</type>
</CustomField>