force-app/main/default/objects/Quote_Line_Item__c/fields/Thickness__c.field-meta.xml
<CustomField>
    <fullName>Thickness__c</fullName>
    <label>Thickness (Normal +/- Band)</label>
    <length>18</length>
    <type>Text</type>
</CustomField>