force-app/main/default/objects/Quote_Line_Item__c/fields/Thread_Size__c.field-meta.xml
<CustomField>
    <fullName>Thread_Size__c</fullName>
    <label>Thread Size</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>M5 x 0.5 Fine</fullName>
            </value>
            <value>
                <fullName>M5 x 0.5 Fine TR</fullName>
            </value>
            <value>
                <fullName>M5 x 0.8 Coarse</fullName>
            </value>
            <value>
                <fullName>M5 x 0.8 Coarse TR</fullName>
            </value>
            <value>
                <fullName>M6 x 0.75 Fine</fullName>
            </value>
            <value>
                <fullName>M6 x 0.75 Fine TR</fullName>
            </value>
            <value>
                <fullName>M6 x 1.0 Coarse</fullName>
            </value>
            <value>
                <fullName>M6 x 1.0 Coarse TR</fullName>
            </value>
            <value>
                <fullName>M8 x 1.0 Fine</fullName>
            </value>
            <value>
                <fullName>M8 x 1.0 Fine TR</fullName>
            </value>
            <value>
                <fullName>M8 x 1.25 Coarse</fullName>
            </value>
            <value>
                <fullName>M8 x 1.25 Coarse TR</fullName>
            </value>
            <value>
                <fullName>M10 x 1.25 Fine</fullName>
            </value>
            <value>
                <fullName>M10 x 1.25 Fine TR</fullName>
            </value>
            <value>
                <fullName>M10 x 1.5 Coarse</fullName>
            </value>
            <value>
                <fullName>M10 x 1.5 Coarse TR</fullName>
            </value>
            <value>
                <fullName>M12 x 1.25 Fine</fullName>
            </value>
            <value>
                <fullName>M12 x 1.25 Fine TR</fullName>
            </value>
            <value>
                <fullName>M12 x 1.5 Fine</fullName>
            </value>
            <value>
                <fullName>M12 x 1.5 Fine TR</fullName>
            </value>
            <value>
                <fullName>M12 x 1.75 Coarse</fullName>
            </value>
            <value>
                <fullName>M12 x 1.75 Coarse TR</fullName>
            </value>
            <value>
                <fullName>M14 x 1.5 Fine</fullName>
            </value>
            <value>
                <fullName>M14 x 2.0 Coarse</fullName>
            </value>
            <value>
                <fullName>M16 x 1.5 Fine</fullName>
            </value>
            <value>
                <fullName>M16 x 2.0 Coarse</fullName>
            </value>
            <value>
                <fullName>M18 x 1.5 Fine</fullName>
            </value>
            <value>
                <fullName>M18 x 2.5 Coarse</fullName>
            </value>
            <value>
                <fullName>M20 x 1.5 Fine</fullName>
            </value>
            <value>
                <fullName>M20 x 2.5 Coarse</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>