force-app/main/default/objects/Quote_Line_Item__c/fields/Tolerence__c.field-meta.xml
<CustomField>
    <fullName>Tolerence__c</fullName>
    <label>Tolerence</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>6E</fullName>
            </value>
            <value>
                <fullName>6G</fullName>
            </value>
            <value>
                <fullName>6H</fullName>
            </value>
            <value>
                <fullName>E6 (ISO 286-2)</fullName>
            </value>
            <value>
                <fullName>E7 (ISO 286-2)</fullName>
            </value>
            <value>
                <fullName>E11 (ISO 286-2)</fullName>
            </value>
            <value>
                <fullName>E12 (ISO 286-2)</fullName>
            </value>
            <value>
                <fullName>E13 (ISO 286-2)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>