force-app/main/default/objects/Quote_Line_Item__c/fields/Tooling__c.field-meta.xml
<CustomField>
    <fullName>Tooling__c</fullName>
    <label>Tooling</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>