force-app/main/default/objects/Quote_Line_Item__c/fields/Torque_Out_Min__c.field-meta.xml
<CustomField>
    <fullName>Torque_Out_Min__c</fullName>
    <label>Torque-Out Min</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>10mm</fullName>
            </value>
            <value>
                <fullName>11mm</fullName>
            </value>
            <value>
                <fullName>12mm</fullName>
            </value>
            <value>
                <fullName>13mm</fullName>
            </value>
            <value>
                <fullName>14mm</fullName>
            </value>
            <value>
                <fullName>15mm</fullName>
            </value>
            <value>
                <fullName>10 lbf/ft</fullName>
                <isActive>false</isActive>
                <label>10 lbf/ft</label>
            </value>
            <value>
                <fullName>10 nm</fullName>
                <isActive>false</isActive>
                <label>10 nm</label>
            </value>
            <value>
                <fullName>100 lbf/ft</fullName>
                <isActive>false</isActive>
                <label>100 lbf/ft</label>
            </value>
            <value>
                <fullName>100 nm</fullName>
                <isActive>false</isActive>
                <label>100 nm</label>
            </value>
            <value>
                <fullName>101 lbf/ft</fullName>
                <isActive>false</isActive>
                <label>101 lbf/ft</label>
            </value>
            <value>
                <fullName>101 nm</fullName>
                <isActive>false</isActive>
                <label>101 nm</label>
            </value>
            <value>
                <fullName>102 lbf/ft</fullName>
                <isActive>false</isActive>
                <label>102 lbf/ft</label>
            </value>
            <value>
                <fullName>102 nm</fullName>
                <isActive>false</isActive>
                <label>102 nm</label>
            </value>
            <value>
                <fullName>103 lbf/ft</fullName>
                <isActive>false</isActive>
                <label>103 lbf/ft</label>
            </value>
            <value>
                <fullName>103 nm</fullName>
                <isActive>false</isActive>
                <label>103 nm</label>
            </value>
            <value>
                <fullName>104 lbf/ft</fullName>
                <isActive>false</isActive>
                <label>104 lbf/ft</label>
            </value>
            <value>
                <fullName>104 nm</fullName>
                <isActive>false</isActive>
                <label>104 nm</label>
            </value>
            <value>
                <fullName>105 lbf/ft</fullName>
                <isActive>false</isActive>
                <label>105 lbf/ft</label>
            </value>
            <value>
                <fullName>105 nm</fullName>
                <isActive>false</isActive>
                <label>105 nm</label>
            </value>
            <value>
                <fullName>106 lbf/ft</fullName>
                <isActive>false</isActive>
                <label>106 lbf/ft</label>
            </value>
            <value>
                <fullName>106 nm</fullName>
                <isActive>false</isActive>
                <label>106 nm</label>
            </value>
            <value>
                <fullName>107 lbf/ft</fullName>
                <isActive>false</isActive>
                <label>107 lbf/ft</label>
            </value>
            <value>
                <fullName>107 nm</fullName>
                <isActive>false</isActive>
                <label>107 nm</label>
            </value>
            <value>
                <fullName>108 lbf/ft</fullName>
                <isActive>false</isActive>
                <label>108 lbf/ft</label>
            </value>
            <value>
                <fullName>108 nm</fullName>
                <isActive>false</isActive>
                <label>108 nm</label>
            </value>
            <value>
                <fullName>109 lbf/ft</fullName>
                <isActive>false</isActive>
                <label>109 lbf/ft</label>
            </value>
            <value>
                <fullName>109 nm</fullName>
                <isActive>false</isActive>
                <label>109 nm</label>
            </value>
            <value>
                <fullName>11 lbf/ft</fullName>
                <isActive>false</isActive>
                <label>11 lbf/ft</label>
            </value>
            <value>
                <fullName>11 nm</fullName>
                <isActive>false</isActive>
                <label>11 nm</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>