force-app/main/default/objects/Quote_Line_Item__c/fields/Training__c.field-meta.xml
<CustomField>
    <fullName>Training__c</fullName>
    <label>Training</label>
    <length>100</length>
    <type>Text</type>
</CustomField>