force-app/main/default/objects/Quote_Line_Item__c/fields/Water_Ingress__c.field-meta.xml
<CustomField>
    <fullName>Water_Ingress__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Water Ingress</label>
    <type>Checkbox</type>
</CustomField>