force-app/main/default/objects/Quote_Line_Item__c/fields/X3D_Model_Required__c.field-meta.xml
<CustomField>
    <fullName>X3D_Model_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>3D Model Required</label>
    <type>Checkbox</type>
</CustomField>