force-app/main/default/objects/Quote_Line_Item__c/recordTypes/Non_SPAC.recordType-meta.xml
<RecordType>
    <fullName>Non_SPAC</fullName>
    <active>true</active>
    <label>Non SPAC</label>
</RecordType>