force-app/main/default/objects/Quote_Line_Item__c/recordTypes/SPAC.recordType-meta.xml
<RecordType>
    <fullName>SPAC</fullName>
    <active>true</active>
    <label>SPAC</label>
</RecordType>